fix: Resolve Turkish character encoding issues in PostgreSQL
- Updated docker-compose.yml to use official postgres:16 image
- Added proper UTF-8 locale environment variables (LC_ALL, LANG)
- Configured automatic seed data loading via docker-entrypoint-initdb.d
- Added health check for PostgreSQL container
- Turkish characters now display correctly in database
- Moved 001_InitialCreate.sql to .bak to prevent conflicts with EF migrations
- All 30 seed records now properly show Turkish characters (İ, Ş, Ğ, Ç, Ö, Ü)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,27 @@ version: '3.8'
 services:
   # PostgreSQL Database
   postgres:
-    build:
-      context: .
-      dockerfile: Dockerfile.db
+    image: postgres:16
     container_name: toyota-postgres
+    environment:
+      - POSTGRES_DB=VehicleServiceTrackerDb
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - LC_ALL=en_US.UTF-8
+      - LANG=en_US.UTF-8
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./DatabaseScripts:/docker-entrypoint-initdb.d
     networks:
       - toyota-network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d VehicleServiceTrackerDb"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # .NET Web API
   api:
